fix: Remove overflow from body

--- a/src/assets/styles/globals/_boilerplate.scss
+++ b/src/assets/styles/globals/_boilerplate.scss
@@ -16,6 +16,8 @@ html {
 body {
   margin: 0;
   padding: 0;
+  max-height: 100vh;
+  overflow: hidden;
   // TODO: Update to match your project's design
   // use from util fonts
   font-family: 'Open Sans', sans-serif;
